@startuml

interface Notificable {
  - contactos: List<Contacto>
  - medioPredeterminado: Contacto
  + notificar(String): Notificacion
}

 enum EstadoNotificacion {
     PENDIENTE
     COMPLETADA
     FALLIDA
 }

 abstract class Contacto {
     - valor: String
     + enviar(mensaje: String): boolean
 }

 class Notificacion {
     - receptor: Notificable
     - mensaje: String
     - estado: EstadoNotificacion
     --
     + marcarComoCompletada(): void
     + marcarComoFallida(): void
 }

 class ContactoPorEmail
 class ContactoPorSMS
 class ContactoPorWhatsApp

 Notificable -down-  Notificacion: conoce
 Notificacion "1" --> "1" EstadoNotificacion : tiene un

 ContactoPorEmail -up-|> Contacto : hereda
 ContactoPorSMS -up-|> Contacto : hereda
 ContactoPorWhatsApp -up-|> Contacto : hereda

 Notificable *-- Contacto: tiene

 @enduml